--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
         {
             "source": "/api/(.*)",
             "destination": "/backend/main.py"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
